bug: outline minimap overlapping cards
closes #52

outline minimap no longer overlaps cards when you resize the window

--- a/app/css/outline_block.css.scss
+++ b/app/css/outline_block.css.scss
@@ -10,6 +10,10 @@
   margin: 20px;
 }
 
+.outline__scenes-container {
+  width: 75%;
+}
+
 .outline__card__line-title {
   float:right;
 }
@@ -35,7 +39,13 @@ li.outline__minimap__scene-title > a:hover {
 }
 
 .outline__minimap {
-  width: 250px;
+  display: block;
+  position: fixed;
+  right: 0px;
+  top: 55px;
+  width: 25%;
+  height:90%;
+  overflow-y: scroll;
   border-left: 1px solid $new-item-border-color;
   border-bottom: 1px solid $new-item-border-color;
   padding-top: 5px;
@@ -49,12 +59,11 @@ li.outline__minimap__scene-title > a:hover {
   padding-top: 26px;
   right:0px;
   height: 100%;
-  overflow-y: scroll;
 }
 
 .outline__minimap__placeholder {
-  width: 800px;
-  padding-left: 10px;
+  width: 25%;
+  height: 100%;
   margin-left: 10px;
 }
 
